namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-admin-service-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-cla-admin-service-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-cla-devs"
    cloud-platform.justice.gov.uk/application: "CLA Admin Service"
    cloud-platform.justice.gov.uk/owner: "CALA: cla@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-cla-admin-service"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
